[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stress-testing"
version = "0.1.2"
description = "Stress testing tools for NSO Northbound API:s"
authors = [
    {name = Ulrik Stridsman", email = "uforsgre@cisco.com"}
]
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.0",
    "jsonrpc-async>=2.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=3.0.0",
    "pytest-order>=0.8.0",
    "pytest-dependency>=0.5.0",
    "aiohttp>=3.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"

[project.urls]
Homepage = "https://github.com/ulrikforsgren/stress-testing"
Issues = "https://github.com/ulrikforsgren/stress-testing/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["stress_testing*"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = false
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
